--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "ai-chat-llm",
   "version": "1.0.0",
   "description": "LLM service module for AI chat application",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.mjs",
+  "types": "types/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": "./index.mjs",
+    "./types": "./types/index.d.ts"
+  },
   "scripts": {
-    "build": "tsc",
-    "test": "jest"
+    "test": "node --test tests/**/*.test.mjs",
+    "example:simple": "node examples/simple-chat.mjs",
+    "example:tools": "node examples/tool-usage.mjs",
+    "example:conversation": "node examples/conversation.mjs",
+    "example:multi": "node examples/multi-provider.mjs",
+    "example:streaming": "node examples/streaming.mjs"
   },
   "keywords": [
     "llm",
@@ -21,5 +30,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.758.0"
-  }
+  },
+  "files": [
+    "*.mjs",
+    "config/*.mjs",
+    "providers/*.mjs",
+    "examples/*.mjs",
+    "types/**/*.d.ts",
+    "README.md",
+    "AmazonQ.md"
+  ]
 }
