--- a/package.json
+++ b/package.json
@@ -1,43 +1,34 @@
 {
   "name": "ai-chat-llm",
   "version": "1.0.0",
-  "description": "LLM service module for AI chat application",
+  "description": "A unified interface for interacting with various LLM providers",
   "main": "index.mjs",
-  "types": "types/index.d.ts",
   "type": "module",
-  "exports": {
-    ".": "./index.mjs",
-    "./types": "./types/index.d.ts"
-  },
+  "types": "./types/types.d.ts",
   "scripts": {
-    "test": "node --test tests/**/*.test.mjs",
+    "test": "node --test tests/*.test.mjs",
     "example:simple": "node examples/simple-chat.mjs",
     "example:tools": "node examples/tool-usage.mjs",
     "example:conversation": "node examples/conversation.mjs",
     "example:multi": "node examples/multi-provider.mjs",
-    "example:streaming": "node examples/streaming.mjs"
+    "example:streaming": "node examples/streaming.mjs",
+    "example:ollama": "node examples/ollama-example.mjs",
+    "generate-types": "mkdir -p types && npx tsc --declaration --emitDeclarationOnly --outDir ./types"
   },
   "keywords": [
     "llm",
     "ai",
-    "chat"
+    "chat",
+    "bedrock",
+    "ollama"
   ],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.13.10",
-    "typescript": "^5.8.2"
-  },
+  "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.758.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.515.0",
+    "ollama": "^0.5.15"
   },
-  "files": [
-    "*.mjs",
-    "config/*.mjs",
-    "providers/*.mjs",
-    "examples/*.mjs",
-    "types/**/*.d.ts",
-    "README.md",
-    "AmazonQ.md"
-  ]
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
