--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orange-llm",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An interface for interacting with various LLM providers",
   "main": "index.mjs",
   "type": "module",
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.515.0",
+    "@mistralai/mistralai": "^1.7.2",
     "ollama": "^0.5.15"
   }
 }
